--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,47 @@
 .App {
-  text-align: center;
+  background-color: #f4c2c20d ;
+  height: 100vh;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.main-input-container {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.button-container span {
+  margin: 9px 6px;
+}
+.main-input-container input {
+  height: 35px;
+  margin-right: 11px;
+}
+.compleat-task {
+  text-decoration: line-through;
+}
+.main-heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.checkbox-text {
+  display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.todo-data-wraper {
+  display: flex;
+    background: azure;
+    padding: 22px;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
+}
+.checkbox-text input {
+  margin-right: 25px;
 }
 .todo-data-container {
   display: flex;
@@ -17,6 +54,22 @@
   align-items: center;
   justify-content: space-between;
   padding-left: 15px;
+}
+.button-container span:nth-child(1) {
+  background-color: green;
+  padding: 10px;
+  color: #fff;
+}
+.button-container span:nth-child(2) {
+  background-color: red;
+  padding: 10px;
+  color: #fff;
+}
+.no-task {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
 }
 
 @media (prefers-reduced-motion: no-preference) {
